<resources>
    <string name="app_name">BusPassManagemeentSystem</string>
    <string name="bus_pass_management_system">BUS PASS MANAGEMENT SYSTEM</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="bus_pass_system">BUS PASS SYSTEM</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>

    <string-array name="duration_options">
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
    </string-array>

</resources>